@@ -2,66 +2,107 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>jenkins_project</groupId>
 	<artifactId>jenkins_project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<dependencies><!--
-		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+
+	<dependencies>
+		<!-- Selenium -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>4.27.0</version>
-		</dependency><!--
-		https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		</dependency>
+
+		<!-- Apache POI -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>5.4.1</version>
-		</dependency><!--
-		https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.4.1</version>
-		</dependency><!--
-		https://mvnrepository.com/artifact/org.testng/testng -->
+		</dependency>
+
+		<!-- TestNG -->
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>7.10.2</version>
-		</dependency><!--
-		https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+			<scope>test</scope>
+		</dependency>
+
+		<!-- JSON Simple -->
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
-		</dependency><!--
-		https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+		</dependency>
+
+		<!-- MySQL Connector -->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<version>9.2.0</version>
-		</dependency><!--
-		https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11 -->
+		</dependency>
+
+		<!-- Oracle JDBC -->
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
 			<version>21.19.0.0</version>
-		</dependency><!--
-		https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		</dependency>
+
+		<!-- Extent Reports -->
 		<dependency>
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
 			<version>5.0.9</version>
-		</dependency> <!--
-		https://mvnrepository.com/artifact/org.apache.maven.surefire/surefire-booter -->
-		<dependency>
-			<groupId>org.apache.maven.surefire</groupId>
-			<artifactId>surefire-booter</artifactId>
-			<version>3.5.4</version>
 		</dependency>
+
+		<!-- Lombok (latest, compatible with Java 21) -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
+
+	<build>
+		<plugins>
+			<!-- Maven Compiler Plugin for Java 21 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
+				<configuration>
+					<source>21</source>
+					<target>21</target>
+					<compilerArgs>
+						<!-- Allow Lombok to access JDK internals -->
+						<arg>--add-opens</arg>
+						<arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+					</compilerArgs>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.34</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<profiles>
+		<!-- Smoke / Sanity Test Profile -->
 		<profile>
 			<id>ST</id>
 			<build>
@@ -79,6 +120,8 @@
 				</plugins>
 			</build>
 		</profile>
+
+		<!-- Regression Test Profile -->
 		<profile>
 			<id>RT</id>
 			<build>
@@ -97,4 +140,5 @@
 			</build>
 		</profile>
 	</profiles>
+
 </project>
